# lighten

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
application/: CMakeLists.txt
application/source/: application.cpp
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/: LightEngine.hpp  lighten.cpp
engine/src/: lighten.cpp  lipch.h
engine/src/lighten/: lighten.hpp
lighten/: CMakeLists.txt
lighten/src/: lighten.hpp
tests/: CMakeLists.txt
tests/src/: basic-test.cpp
